# SMProxy3

./: CMakeLists.txt  README.md  SMProxyConfig.h.in  中国电信SMGP协议（V3.0.3）.doc  中国移动CMPP2.0.doc  中国联通SGIP1.2.doc
src/: CMakeLists.txt  SMProxy.cpp  SMProxy.h
test/: CMakeLists.txt
